# cargo-cmd

./: .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md
scripts/: before_deploy.ps1  before_deploy.sh  install.sh  script.sh
src/: main.rs
tests/: test.rs
