[package]
name = "cargo-cmd"
description = "Like npm scripts, but for cargo"
version = "0.2.0"
authors = ["Dan Reeves <hey@danreev.es>"]
repository = "https://github.com/danreeves/cargo-cmd"
license = "MIT"
readme = "README.md"
categories = ["development-tools::cargo-plugins"]
keywords = ["cargo", "cmd", "scripts", "commands", "npm"]

[package.metadata.commands]
echo = "echo"
greet = "cargo cmd echo 'Hello, planet!'"
dev = "cargo watch -s 'clear; cargo build && cargo cmd greet'"
pass = "exit 0"
fail = "exit 42"

[dependencies]
toml = "0.4.8"
serde_derive = "1.0.79"
serde = "1.0.79"
subprocess = "0.1.16"
structopt = "0.2.10"
clap = "2.32.0"
assert_cli = "0.6.3"

[badges]
travis-ci = { repository = "danreeves/cargo-cmd", branch = "master" }
